# Project_Software_Engineer

./: CD.h  CMakeLists.txt  corrupt.xml  main.cpp  output.txt  structure.dot
Classes/Buildings/: Buildings.cpp  Buildings.h
Classes/Campus/: Campus.cpp  Campus.h
Classes/Catering Providers/: Cateringproviders.cpp  Cateringproviders.h
Classes/CateringProviders/: Cateringproviders.cpp  Cateringproviders.h
Classes/DesignByContract/: DesignByContract.h
Classes/File_Reader/: File_Reader.cpp  File_Reader.h
Classes/Meeting/: Meeting.cpp  Meeting.h
Classes/Meetingplanner/: Meetingplanner.cpp  Meetingplanner.h
Classes/Parser/: Parser.cpp  Parser.h
Classes/Participation/: Participation.cpp  Participation.h
Classes/Renovations/: Renovations.cpp  Renovations.h
Classes/Room/: Room.cpp  Room.h
Tests/: MeetingPlannerDomainTests.cpp  MeetingPlannerInputTests.cpp  MeetingPlannerOutputTests.cpp  TEST_parse_xxx_element.cpp  test_main.cpp
Tests/test_XML_file/: capacity_not_int.xml  happy_day.xml  meeting_cancelled.xml  missing_information.xml
XML_files/: Room.xml
testInput/: corrupt.xml  happy_day.xml  happy_day_parser.xml  invalid_types.xml  missing_fields.xml  syntax_error.xml
testOutput/: expected_bereik_participanten.txt  expected_dot_only_rooms.dot  expected_happy_day_output.txt  expected_happy_day_structure.dot  expected_lege_rooms_volle_meetings.txt  expected_orde_omgekeerd.txt  expected_rooms_only.txt
tinyxml_2_6_2/: CMakeLists.txt
tinyxml_2_6_2/Uitproberen/: oefen.cpp
tinyxml_2_6_2/tinyxml/: tinyxml.cpp  tinyxmlparser.cpp  xmltest.cpp
